# bible_passage_prediction

./: README.md  pyproject.toml  requirements.txt
notebooks/: bible_author_prediction_Logit_model_new.pkl  bible_author_vectorizer.pkl  results.html
notebooks/.ipynb_checkpoints/: Bible_Passage_Case_Study-checkpoint.ipynb  Predicting Authors of Bible Passages and Bible Passages with ML-checkpoint.ipynb
